# AstraGuard-AI

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CHECKLIST_397.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY_397.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FILE_MANIFEST_397.md  FINAL_SUMMARY_397.md  FRONTEND.md  GETTING_STARTED.md  IMPLEMENTATION_REPORT_397.md  INDEX_397.md  ISSUES_7_8_9_10_RESOLUTION.md  ISSUE_20_COMPLETE.md  ISSUE_397_IMPLEMENTATION.md  PROJECT_REPORT.md  PROJECT_REPORT_BRIEF.md  PR_397_SUMMARY.md  README.md  ROADMAP.md  SHOWCASE.md  STARTUP_GUIDE.md  TODO.md  VERIFICATION_397.md  citation.bib  cli.py  deploy.sh  docker-compose.yml  faliure forecasting .py  health score.py (2).url  package.json  pyproject.toml  pytest.ini  quickstart_swarm.py  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  codeql.yml  tests.yml
anomaly/: anomaly_detector.py  forecasting.py
api/: contact.py  models.py  service.py
astraguard/: __init__.py  logging_config.py  tracing.py
astraguard/swarm/: __init__.py
astraguard/telemetry/: __init__.py  telemetry_stream.py
backend/: distributed_coordinator.py  fallback_manager.py  health_monitor.py  main.py  redis_client.py  safe_condition_parser.py
backend/monitoring_integrations/: __init__.py
backend/orchestration/: __init__.py
backend/storage/: memory.py
classifier/: fault_classifier.py
config/: requirements-ci.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
core/: auth.py  error_handling.py  resource_monitor.py  secrets.py  timeout_handler.py
dashboard/: app.py
demo/: README.md  demo_run_instructions.txt  demo_script.md  video_script.txt
docker/: Dockerfile
docs/: SUBMISSION_GUIDE.md  index.html  monitoring_integrations.md  swarm-models.md
docs/artifacts/: COMPLETION_CERTIFICATE.txt  ISSUE_20_VISUAL_SUMMARY.txt  PROJECT_COMPLETION_SUMMARY.txt  ROOT_CAUSE_ANALYSIS.txt
frontend/: sample_landing.html
frontend/as_lp/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/landing page/: LANDING_PAGE.md
frontend/mission-components/: package-lock.json  package.json
logs/: .gitkeep  timeline.py
memory_engine/: memory_store.py
security_engine/: adaptive_memory.py  decorators.py  policy_engine.py
simulation/: attitude_3d.py
state_machine/: state_engine.py
telemetry/: telemetry_stream.py
tests/: __init__.py  conftest.py  test_anomaly_detector.py  test_api.py  test_basic.py  test_component_health.py  test_component_health_old.py  test_contact.py  test_core_circuit_breaker.py  test_core_component_health.py  test_core_error_handling.py  test_coverage_enhancement.py  test_health_monitor_integration.py  test_input_validation.py  test_metrics.py  test_metrics_old.py  test_mission_phase_system.py  test_monitoring_integrations.py  test_observability.py  test_recovery_orchestrator_enhanced.py  test_resource_monitor.py  test_safe_condition_parser.py  test_timeout_handler.py
tests/benchmark/: test_feedback_epic.py
tests/hil/: test_orbit_simulator.py
tests/swarm/: test_action_propagator.py  test_bandwidth_governor.py  test_bus.py  test_compressor.py  test_health_broadcaster.py  test_integration_397_398.py  test_intent.py  test_models.py  test_registry.py  test_reliable_delivery.py  test_swarm_memory.py  test_swarm_sim.py
tests/test_decorators/: test_feedback_decorator.py
tests/test_memory/: test_feedback_pinning.py
(+43 files in other folders)
