[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraguard-ai"
version = "1.0.0"
description = "Autonomous Fault Detection & Recovery System for CubeSats"
readme = "README.md"
authors = [
    { name = "Subhajit Roy", email = "your.email@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "streamlit>=1.10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "isort>=5.10.0",
    "pre-commit>=2.0.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
    "sphinx-copybutton>=0.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "build>=0.7.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sr-857/AstraGuard-AI"
Documentation = "https://github.com/sr-857/AstraGuard-AI#readme"
Issues = "https://github.com/sr-857/AstraGuard-AI/issues"
Source = "https://github.com/sr-857/AstraGuard-AI"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[flake8]
max-line-length = 88
exclude = ".git,__pycache__,build,dist"
max-complexity = 10
select = "E9,F63,F7,F82"

[isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
